# hemrs

./: .gitlab-ci.yml  AGENTS.md  Dockerfile  README.md  docker-compose-test.yaml  docker-compose.yaml  justfile
.github/workflows/: ci-cd.yml  daily-repo-status.lock.yml  daily-repo-status.md
.sqlx/: query-03e0e1606773fcefcf325ed73225f637eb29599a4555170aa2475153e7f8043a.json  query-0ee3f3280663bd55b20dfdec943abdfd16693b8f5053e10a6f9d9d6fd57e9b40.json  query-18058a5ac8bdc40eaa97c05c07461fe5e472968d5c5262e1b708a4eb5f9a6c09.json  query-239109a49d0ac99a893f5a6ecd2f137d7db2dae250a5b48baab37857bdfb85e2.json  query-2eb9608471b7aa4ddc5d87b0c461df488f436677d0542db4b2d79744327942d0.json  query-6e4fb236e2cf940a700066ed303177aae5f7ef45af21c7a001e177e1fe85a504.json  query-70857ef3045b55d3c28792846bbf91f1e547b3959d998e3aae76c30f84c80e33.json  query-7bf4493010b27a9a566fb0ee915776096875afb525ac6737ffab6727c6f327b0.json  query-90f7d171fd2083e29406d3271af854e983afa155961c4bdabcb592b59529ffa3.json  query-b45053c9a65da06ac86b9df77383968f146b9727628ac953ff532e0ad2a4d51e.json  query-d82e3aa8405505a20ecb253e6b7b51d238b0b0fa38f61ab004413c68b1cbc41a.json
backend/: Cargo.toml
backend/.sqlx/: query-03ddff6260fb269b656f9707fab5802000c0ca1e4ae9e4940c1f2e9a0f14455d.json  query-07e854cd48155edb21f832fe19d436c8c3b6a4b71a703f30cfe3127c051bd2a5.json  query-0845834b8efd02d17610d6a239777ff22ed82a9a576ab1da06bba82d793ca88f.json  query-1425a6a910bae7345c98e6a7831c6184349ee31416728f1861b1dc1403c79a46.json  query-2a6c82acb922a5c857355d1ea3922a31a66bf342d3d6377bccc270ec721f0fb2.json  query-2efc8a06de393f0539b5902699a303c2101ea65ce8af3bcb91bca61c9df8a56e.json  query-3057c3401b2a5690968979a7ed18d5959fbeaafb8cf9dd1196938f39bef7ec31.json  query-3575ab24ad807d38e1fdc0c4aecda8e6c97c8ec49be5c2ff7f9cad98502137dc.json  query-54e2de89142efd4311e5872c33bd74552fe8deeb57efd54cd5c1f8ebcaf20a51.json  query-704f01c397274b9385c1ab8ca3e4f00a4a268d5aecbfb3b7ef8d9174565a7dfa.json  query-7d0062b526a2b8f2dbc10bb056581bc34470bc495645f2a20e11c3a46ed23e0e.json  query-7f0bdeb5045fe348675050448f33d697a61b1d567cdae65cbb189cee5cd1a8aa.json  query-a7327234ecf5447788e3743c8dc27a418c6eabfd1b18267fe51053e061d0051e.json  query-b447deaa1fd37226645d8ba57c642bcf4e9d791fda467ddf0558808df72627d5.json  query-c9a297b05dbd5ce607eadbf674a9fc03d6e1526fa511bf9cf4f2cad01c7c62f8.json  query-e908f272439002e0e143400dd393c5e021466e2fbf636cfb8af5eaf03b7e950d.json  query-ec79fdfbb731b3d20128a5c2d37734b0ba6819a092143d787cfbfa0475e6a701.json  query-fd527ef106abea46a086a62d1ef6cab70af2bcdc11e371e7241fd1be8496d95f.json
backend/src/: background_tasks.rs  devices.rs  main.rs  measurements.rs  sensors.rs
backend/src/handlers/: devices.rs  error.rs  measurements.rs  mod.rs  ping.rs  sensors.rs
dev_docs/: README.md  agent-guide.md  api.md  architecture.md  backend.md  conventions.md  database.md  development.md  frontend.md  plotter.md  todo.md
frontend/: Dockerfile  deno.json  main.ts
frontend/assets/: styles.css
frontend/components/: Button.tsx  DeviceList.tsx  MeasurementStatCard.tsx  MeasurementsInfo.tsx  MeasurementsList.tsx  PlotCard.tsx  SensorList.tsx
frontend/islands/: DeviceList.tsx  (+1 more)
plotter/: Dockerfile  app.py  backend_client.py  models.py  pyproject.toml
plotter/tests/: conftest.py  test_app.py  test_backend_client.py  test_cache.py  test_helpers.py  test_models.py
release/: service.yaml  service_loadbalancer.yaml
sqls/: measurement_insert_rate_over_time.sql  measurements_by_device_and_sensor.sql  measurements_by_device_and_sensor_name.sql  measurements_by_device_and_sensor_name_lat.sql  measurements_by_device_and_sensor_name_lightning_count.sql  measurements_by_device_and_sensor_name_lon.sql
(+25 files in other folders)
