[package]
name = "backend"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "time", "chrono"] }
clap = { version = "4.5.41", features = ["derive", "env"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["tracing", "load"] }
tower-http = { version = "0.6.8", features = ["trace", "full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "tracing"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
futures = "0.3.32"
moka = { version = "0.12.13", features = ["future"] }
utoipa = { version = "5.4.0", features = ["chrono"] }
