[package]
name = "backend"
version = "0.39.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.104"
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "chrono"] }
clap = { version = "4.6.3", features = ["derive", "env"] }
tokio = { version = "1.53.1", features = ["full"] }
tower = { version = "0.5.3", features = ["tracing", "load"] }
tower-http = { version = "0.7.0", features = ["trace", "full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "tracing"] }
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
futures = "0.3.33"
moka = { version = "0.12.15", features = ["future"] }
utoipa = { version = "5.5.0", features = ["chrono"] }

[dev-dependencies]
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
