[project]
name = "plotter"
version = "0.39.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "matplotlib>=3.10.8",
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
    "respx>=0.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
